2013-06-09  Richard Murray  <murray@altura-2.local>

	* tests/bdalg_test.py (TestFeedback.testScalarSS)
	(TestFeedback.testScalarTF): added simple test of default argument
	to feedback() for state space and transfer function systems

	* tests/frd_test.py (TestFRD.testFeedback): added test of default
	argument to feedback() for FRD type

	* src/bdalg.py (feedback): 
	* src/frdata.py (FRD.feedback):
	* src/statesp.py (StateSpace.feedback):
	patched in default value of 1 for other system in feedback().
	Contributed by Ryan Krauss <rkrauss@siue.edu>
	
	* tests/xferfcn_test.py (TestXferFcn.testEvalFrMIMO)
	(TestXferFcn.testEvalFrSISO): added tests of __call__ version of
	evalfr. 

	* src/xferfcn.py (TransferFunction.__call__): patched in new
	__call__ functionality from Ryan Krauss <rkrauss@siue.edu>, but
	modified to use evalfr (works with MIMO).  SISO transfer functions
	return a single complex number, MIMO transfer functions return a
	matrix of complex numbers.

2013-05-23  Rene van Paassen <rene.vanpaassen@gmail.com>

	* src/margin.py: re-vamped stability_margins function. Now
          uses analytical method for TF and state-space, works on FRD
          objects too, and can optionally return all margins found for
          the analytical method.

	* src/xferfcn.py and src/frdata.py: Now return array result
          for fresp when called with an iterable frequency vector

	* src/xferfcn.py and src/statesp.py: added minreal functions

	* src/bdalg.py: implemented append and connect functions (old
          version, with indexes, not with names)
	  
	* src/matlab.py: added connect, append, minreal

	* src/xferfcn.py and src/statesp.py: added/corrected
          __rmul__. In most cases a gain matrix (np.matrix) may now be
          used in combination with ss or tf systems.

2012-11-10  Richard Murray  <murray@altura.local>

	* src/canonical.py: new module implementing conversions to selected
	canonical forms: canonical_form(), reachable_form() implemented
